--- a/RepositoryParser/RepositoryParser/View/WeekDayActivityView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekDayActivityView.xaml
@@ -7,7 +7,7 @@
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
-        Title="WeekDayActivityView" Height="600" Width="800"
+         Title="{x:Static resw:Resources.WeekdayActivity}" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivity}"
         Icon="../Assets/Icons/Ratings Filled-50.png"
         >
