--- a/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
@@ -7,7 +7,7 @@
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
-        Title="HourActivityView" Height="600" Width="800"
+         Title="{x:Static resw:Resources.HourActivityView}" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=HourActivity}"
         Icon="../Assets/Icons/Ratings Filled-50.png"
         >
