--- a/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
@@ -7,7 +7,7 @@
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
-        Title="MonthActivityChart" Height="600" Width="800"
+        Title="{x:Static resw:Resources.MonthActivity}" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivity}"
         Icon="../Assets/Icons/Ratings Filled-50.png"
         >
