--- a/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
@@ -9,7 +9,7 @@
         xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
-        Title="{x:Static resw:Resources.AnalysisWindowVie}" Height="640" Width="1000"
+        Title="{x:Static resw:Resources.AnalysisWindowVie}" Height="640" Width="1100"
         DataContext="{Binding Source={StaticResource Locator}, Path=Analisys}"
         Icon="../Assets/Icons/Ratings Filled-50.png"
         >
@@ -147,6 +147,20 @@
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=DiffBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Compare-52.png" Height="24" Margin="2,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.DifferencesButton}" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="UsersCodeFrequency" 
+                    Height="50" 
+                    Command="{Binding GoToUsersCodeFrequencyCommand}" 
+                    Margin="0,0,0,5" 
+                    Background="{StaticResource Graphite}"
+                    Foreground="{StaticResource Grey}"
+                    FontWeight="Light"
+                    >
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=ActivityBtn, Path=ActualWidth}">
+                    <Image Source="../Assets/Icons/Pie-Chart.png" Height="24" Margin="2,0,10,0"/>
+                    <TextBlock VerticalAlignment="Center" Text="{x:Static resw:Resources.GoToUsersFreq}"/>
                 </StackPanel>
             </Button>
         </StackPanel>
