--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -138,8 +138,8 @@
             </ListView.View>
         </ListView>
        
-        <TextBlock Text="{x:Static resw:Resources.ChildCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10" FontWeight="Light"/>
-        <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
+        <TextBlock Text="{x:Static resw:Resources.Changes}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,10,0,10" FontWeight="Light"/>
+        <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextAPanel" Grid.Column="1" Grid.Row="2" Margin="5,10,5,10">
                 <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}" IsEnabled="False">
                     <ListBox.ItemTemplate>
@@ -154,7 +154,7 @@
             </StackPanel>
         </ScrollViewer>
 
-        <TextBlock Text="{x:Static resw:Resources.ParentCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10" FontWeight="Light"/>
+       <!-- <TextBlock Text="{x:Static resw:Resources.ParentCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10" FontWeight="Light"/>
         <ScrollViewer Grid.Column="2" Grid.Row="2"  Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextBPanel" Grid.Column="2" Grid.Row="2" Margin="5,10,5,10">
                 <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextB}" IsEnabled="False">
@@ -168,7 +168,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </StackPanel>
-        </ScrollViewer>
+        </ScrollViewer>-->
 
         <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Button x:Name="GoToChrtButton" 
@@ -187,7 +187,7 @@
             </Button>
         </StackPanel>
 
-
+<!--
          <StatusBar Grid.Row="1" Grid.Column="0" 
                    Grid.RowSpan="2"
                    Grid.ColumnSpan="3"
@@ -197,7 +197,7 @@
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
                    >
-        </StatusBar>
+        </StatusBar>-->
         <StackPanel Orientation="Horizontal" Grid.Row="0" 
                     Grid.Column="0" Grid.RowSpan="5"
                     Grid.ColumnSpan="3" 
