--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -18,7 +18,6 @@
     <Window.Resources>
         <conventers:ChangeTypeToBackgroundColorConventer x:Key="ChangeTypeToBackgroundColorConventer"/>
         <conventers:EnumToColorConventer x:Key="EnumToColorConventer"/>
-        <conventers:AddedToDeletedStringConventer x:Key="AddedToDeletedStringConventer"/>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <Style x:Key="GridViewExtraStyle" TargetType="{x:Type GridViewColumnHeader}">
             <Setter Property="Width" Value="1000"/>
@@ -112,7 +111,7 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock x:Name="ChangeType"
-                                                   Text="{Binding Path=Key, Converter={StaticResource AddedToDeletedStringConventer}}"
+                                                   Text="{Binding Path=Key}"
                                                    Background="{Binding ElementName=ChangeType, Path=Text, Converter={StaticResource ChangeTypeToBackgroundColorConventer} }"
                                                    Foreground="Black"
                                                    IsEnabled="False"
